feat(index.js): drawing the backside of the images

--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,29 @@ body {
 }
 
 .back-side {
-  background-color: #026873;
-  background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.07) 50%, transparent 50%),
-    linear-gradient(90deg, rgba(255, 255, 255, 0.13) 50%, transparent 50%),
-    linear-gradient(90deg, transparent 50%, rgba(255, 255, 255, 0.17) 50%),
-    linear-gradient(90deg, transparent 50%, rgba(255, 255, 255, 0.19) 50%);
-  background-size: 13px, 29px, 37px, 53px;
+  background: linear-gradient(
+      135deg,
+      #708090 21px,
+      #d9ecff 22px,
+      #d9ecff 24px,
+      transparent 24px,
+      transparent 67px,
+      #d9ecff 67px,
+      #d9ecff 69px,
+      transparent 69px
+    ),
+    linear-gradient(
+        225deg,
+        #708090 21px,
+        #d9ecff 22px,
+        #d9ecff 24px,
+        transparent 24px,
+        transparent 67px,
+        #d9ecff 67px,
+        #d9ecff 69px,
+        transparent 69px
+      )
+      0 64px;
+  background-color: #708090;
+  background-size: 64px 128px;
 }
