--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,10 @@ body {
   background-color: #708090;
   background-size: 64px 128px;
 }
+
+.victory-message {
+  position: fixed;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
